# switch-mods

./: .editorconfig  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.cmake  config.cmake.template
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 00-bug-issue.md  10-documentation-issue.md  20-feature-request.md
.github/workflows/: build.yml
build-files/: npdm-debug.json.template  npdm.json.template  run_configuration.xml.template
cmake/: modules.cmake  toolchain.cmake  tools.cmake
gdb/: README.md
lib/nnsdk/user/nn/: diag.h  fs_commit.h  fs_detail.h  hid_detail.h  os_exception.h  primitives.h  ro.h  socketc.h  time_ClockSnapshot.h  web.h
src/acnh/common/sym/: VersionList.sym
src/common/src/: api.h  checks.hpp  main.cpp  stubs.cpp
src/common/src/hakkun/: diag.cpp
src/common/src/imgui_backend/: ImguiShaderCompiler.h  MemoryBuffer.cpp  MemoryBuffer.h  MemoryPoolMaker.cpp  hooks.cpp  hooks.h  imgui_hid_mappings.h  imgui_impl_nvn.cpp  imgui_impl_nvn.hpp  nvn_imgui_config.h
src/common/src/imgui_backend_v2/: ImGuiBackend.cpp  ImGuiBackend.h  hooks.cpp
src/common/src/logger/: logger.cpp  logger.h
src/common/src/memory/: allocator.cpp  allocator.h  object.cpp  object.h
src/common/src/net/: ClientWithHttp.cpp  ClientWithHttp.h  HttpClient.cpp  HttpClient.h  WebsocketClient.cpp  WebsocketClient.h
src/common/src/ui/: ui.h
src/common/src/util/: CodePatcher.h  FileUtil.cpp  FileUtil.h  InputUtil.cpp  InputUtil.h  KeyboardUtil.cpp  KeyboardUtil.h  MessageUtil.cpp  MessageUtil.h  ThreadUtil.cpp  ThreadUtil.h  common_utils.h
src/common/sym/game/: init.sym  nvn.sym
src/mario_party_jamboree/: CMakeLists.txt
src/mario_party_jamboree/common/include/: game_constants.h
src/mario_party_jamboree/common/sym/: ModuleList.sym  VersionList.sym
src/mario_party_jamboree/mod_example/src/: main.cpp  ui.cpp
src/pokemon_sv/: .gitignore  CMakeLists.txt
src/pokemon_sv/common/include/: game_constants.h
src/pokemon_sv/common/src/: GlobalHeap_Utils.cpp  config.cpp  config.h  external_helpers.cpp  lua_hooks.cpp  romfs_redirect.cpp
src/pokemon_sv/common/sym/: VersionList.sym
src/pokemon_sv/mod_crowd_control/lang/: english.json  persian.json  spanish.json
src/pokemon_sv/mod_crowd_control/src/: cc_hooks.h  crowd_control.cpp  lua.cpp  main.cpp  ui.cpp
src/pokemon_sv/mod_debug_tools/src/: battle_hooks.cpp  main.cpp  ui.cpp
src/pokemon_sv/mod_example/src/: lua.cpp  main.cpp  ui.cpp
src/pokemon_swsh/: CMakeLists.txt
src/pokemon_za/: CMakeLists.txt
src/tomodachi_life_ltd/: CMakeLists.txt
tools/: lang_generate_strings.py  logger_server.py  setup_libcxx.py  setup_sail.py
(+164 files in other folders)
